# arm_simulation_packages

./: README.md
arm_moveit/: .setup_assistant  package.xml
arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  low-cost-arm.ros2_control.xacro  low-cost-arm.srdf  low-cost-arm.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml
arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
armjr_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
armjr_moveit_config/config/: arm_jr.ros2_control.xacro  arm_jr.srdf  arm_jr.urdf.xacro  initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
armjr_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  t.launch.py  warehouse_db.launch.py
cmake_arm_urdf/: CMakeLists.txt  package.xml
cmake_arm_urdf/config/: low-cost-arm.yaml
cmake_arm_urdf/launch/: display.launch.py  gazebo_load.launch.py  moveit.launch.py
cmake_arm_urdf/urdf/: arm_jr.urdf  low-cost-arm.urdf  modified_arm.urdf
control/: package.xml
cpaowdkaw/: main.cpp
cpaowdkaw/include/: main.hpp
cpp_armjr_moveit/: CMakeLists.txt  package.xml
cpp_armjr_moveit/src/: arm_jr_ik.cpp  (+1 more)
test_moveit_config/: .setup_assistant  package.xml
test_urdf/: CMakeLists.txt  package.xml
test_urdf/urdf/: low_cost_robot.urdf
(+15 files in other folders)
